--- a/css/custom.css
+++ b/css/custom.css
@@ -7,3 +7,8 @@ code.keyword {
        -moz-border-radius: 6px;
             border-radius: 6px
 }
+
+div.well {
+    border: 2px solid green;
+    background: #F0F0F0;
+}
