--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -174,6 +174,8 @@ body {
 .reveal .slides section .fragment.highlight-current-red,
 .reveal .slides section .fragment.highlight-green,
 .reveal .slides section .fragment.highlight-current-green,
+.reveal .slides section .fragment.highlight-violet,
+.reveal .slides section .fragment.highlight-current-violet,
 .reveal .slides section .fragment.highlight-blue,
 .reveal .slides section .fragment.highlight-current-blue {
 	opacity: 1;
@@ -189,6 +191,10 @@ body {
 		color: #1b91ff;
 	}
 
+	.reveal .slides section .fragment.highlight-violet.visible {
+		color: #cfa3f1;
+	}
+
 .reveal .slides section .fragment.highlight-current-red.current-fragment {
 	color: #ff2c2d
 }
@@ -199,6 +205,9 @@ body {
 	color: #1b91ff;
 }
 
+.reveal .slides section .fragment.highlight-current-violet.current-fragment {
+	color: #cfa3f1;
+}
 
 /*********************************************
  * DEFAULT ELEMENT STYLES
